# Lmo

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/contributing/: index.html
0.4/reference/: index.html
0.4/search/: search_index.json
0.4/styles/: theme.css
api/: index.html
api/L-comoments/: index.html
api/L-moments/: index.html
api/diagnostic/: index.html
api/distributions/: index.html
api/low_level/: index.html
api/pandas/: index.html
contributing/: index.html
distributions/: index.html
docs/: api.md  contributing.md  distributions.md  index.md  reference.md
docs/api/: L-comoments.md  L-moments.md  diagnostic.md  distributions.md  low_level.md  pandas.md
docs/bib/: refs.bib
docs/examples/: lmm.ipynb  visual_intro.ipynb
docs/gallery/: burr12.py  kumaraswamy.py  wakeby.py
docs/jinja/: main.html
docs/scripts/: katex.js  mathjax.js
docs/styles/: gallery.mplstyle  katex.css  theme.css
examples/: anscombes_quartet.ipynb
examples/lmm/: index.html
examples/visual_intro/: index.html
gallery/: genlambda.py  kumaraswamy.py
latest/jinja/: main.html
lmo/: __init__.py  _distns.py  _fit.py  _l_stats.py  _lgmm.py  _lm.py  _lm_co.py  _meta.py  _poly.py  _pwm.py  _typing.py  _utils.py  constants.py  diagnostic.py  distributions.py  errors.py  inference.py  integrate.py  l.py  l_multivariate.py  l_univariate.py  linalg.py  multivariate.py  ostats.py  pwm_beta.py  special.py  stats.py  theoretical.py  typing.py  univariate.py  weights.py
lmo/contrib/: __init__.py  pandas.py  scipy_stats.py
lmo/distributions/: __init__.py  _genlambda.py  _kumaraswamy.py  _lm.py  _nonparametric.py  _utils.py  _wakeby.py
lmo/inference/: __init__.py  _l_gmm.py
lmo/theoretical/: __init__.py  _f_to_f.py  _f_to_h.py  _f_to_lcm.py  _f_to_lm.py  _f_to_lm_cov.py  _f_to_lm_eif.py  _lm_to_f.py  _utils.py
lmo/typing/: __init__.py  _core.py  _scipy.py  compat.py  np.py  scipy.py
reference/: index.html
scripts/: katex.49c4bf.min.js  katex.d735b7.min.js  mathjax.js
search/: search_index.json
styles/: gallery.mplstyle  theme.0e397b.min.css  theme.2243d0.min.css  theme.6d6d05.min.css  theme.css  theme.eeeecd.min.css
tests/: conftest.py  test_diagnostic.py  test_distributions.py  test_l_multivariate.py  test_l_univariate.py  test_l_uv.py  test_meta.py  test_multivariate.py  test_scipy_stats.py  test_special.py  test_stats.py  test_theoretical.py  test_univariate.py  test_utils.py  test_weights.py
typetests/: l_comoment.py  l_comoment.pyi  l_moment.py  l_moment.pyi  l_ratio.py  l_ratio.pyi  l_stats.py  l_stats.pyi  typing_scipy_rv.py
